--- a/style.css
+++ b/style.css
@@ -6,8 +6,36 @@ body {
     background-color: #FFF4E6;
 }
 
+#register {
+    background-image: url("img/gambarchutney.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #cccccc;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+}
+
+.box {
+    width: 60%; 
+    height: 70%; 
+    background-color: rgba(163, 217, 177, 0.6); 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+}
+
+
 h1 {
-    font-size: 200%;
+    font-size: 250%;
     text-align: center;
     font-weight: bold;
 }
@@ -17,6 +45,29 @@ h2 {
     text-align: center;
     font-weight: bolder;
     color: #FF6347;
+}
+
+h3 {
+    font-size: 150%;
+    text-align: center;
+    font-weight: bold;
+}
+
+.register {
+    background-color: #FF6347;
+    /* border: 2px solid #04AA6D;  */
+    color: #04AA6D; 
+    padding: 10px 20px;
+    font-size: 16px;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+
+.register:hover {
+    background-color: #FF8A75; 
+    color: white;
 }
 
 #header {
@@ -65,11 +116,36 @@ h2 {
     text-decoration-thickness: 2px;
 }
 
+#main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#main-content h2 {
+    margin-bottom: 10px;
+    width: 70%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#main-content a {
+    display: block;
+    margin-top: 10px;
+    clear: both;
+    background-color: #ff9900;
+    color: #ffffff;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 18px;
+    text-decoration: none;
+}
+
 #main-content img {
     width: 100%;
     height: auto;
-    display: block; 
 }
+
 
 /* .image-text {
     position: absolute;
@@ -95,4 +171,47 @@ h2 {
     display: flex;
     align-items: center; 
     justify-content: center;
+}
+
+#specialty {
+    align-items: center ;
+}
+
+#specialty h1{
+    margin-top: 10vh;
+    margin-bottom: 50px;
+}
+
+.dish-container {
+    background-color: #D9D9D9;
+    display: flex;
+    align-items: flex-start;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 40px 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+.dish-image {
+    max-width: 150px;
+    margin-right: 20px;
+}
+.dish-content {
+    flex: 1;
+}
+.dish-name {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 0;
+}
+.dish-description {
+    margin: 5px 0 0 0;
+    font-size: 1em;
+    text-align: center;
+}
+
+.dish-container img{
+    border-radius: 10px;
+    max-width: 20%;  
+    height: auto;
 }
