--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
     padding: 0;
     box-sizing: border-box;
     background-color: #FFF4E6;
+    /* display: flex; */
+}
+
+.error {
+    color: red;
+    font-size: 0.9em;
 }
 
 #register {
@@ -20,17 +26,95 @@ body {
     justify-content: center;
 }
 
+.container {
+    position: absolute;
+    /* background-color: #fff; */
+    padding: 0px;
+    border-radius: 8px;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    margin-top: 100px;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 60%;
+    z-index: 99;
+}
+
+h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: font2;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
+
+label {
+    margin-bottom: 5px;
+    text-align: left;
+    font-family: font2;
+}
+
+input {
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #d9d9d9;
+}
+
+select {
+    background-color: #d9d9d9;
+}
+
+option{
+    background-color: #d9d9d9;
+}
+
+button {
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: orange;
+    color: #fff;
+    cursor: pointer;
+    /* font-family: font2; */
+}
+
+button:hover {
+    background-color: black;
+}
+
 .box {
-    width: 60%; 
-    height: 70%; 
-    background-color: rgba(163, 217, 177, 0.6); 
-    position: absolute; 
+    width: 70%; 
+    height: 88%; 
+    background-color: rgba(163, 217, 177, 0.55); 
+    /* rgba(248, 152, 128, 0.6); */
+    position: absolute;     
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
     display: flex; 
     align-items: center; 
     justify-content: center; 
+    border-radius: 5px;
+}
+
+.box h1 {
+    font-size: 250%;
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 30px;
+    color: #000000;
 }
 
 
@@ -141,6 +225,10 @@ h3 {
     text-decoration: none;
 }
 
+#main-content a:hover {
+    background-color: #FF6347; 
+}
+
 #main-content img {
     width: 100%;
     height: auto;
@@ -187,8 +275,8 @@ h3 {
     display: flex;
     align-items: flex-start;
     border: 1px solid #ccc;
-    padding: 10px;
-    margin: 40px 0;
+    padding: 8vh;
+    margin: 80px 0;
     width: 100%;
     box-sizing: border-box;
 }
@@ -215,3 +303,165 @@ h3 {
     max-width: 20%;  
     height: auto;
 }
+
+.dish-section {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    padding: 20px;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    object-fit: cover;
+    background-color: #D9D4A3;
+}
+
+.dish-heading {
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: bolder;
+    color: #FF6347;
+    margin: 0 0 20px;
+}
+
+.dish-wrapper {
+    margin-top: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%; /* Adjust width as needed */
+    flex-wrap: wrap;
+}
+
+.dish-image-container {
+    text-align: center;
+    margin-right: 20px;
+    flex: 1 1 200px;
+}
+
+.dish-image-container img {
+    width: 400px;
+}
+
+.dish-photo {
+    width: 50%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.dish-prices {
+    margin-top: 30px;
+    font-size: 2rem;
+}
+
+.old-price {
+    text-decoration: line-through;
+    color: red;
+    margin-right: 10px;
+}
+
+.new-price {
+    color: green;
+    font-weight: bold;
+}
+
+.dish-details {
+    padding-right: 20px;
+    flex: 1 1 200px;
+    font-size: 1em;
+    color: #777;
+}
+
+.bottom-logo {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 150px;
+    height: auto;
+    padding: 20px;
+}
+
+
+.container {
+    width: 100%;
+    padding: 2rem;
+}
+
+.slider-wrapper{
+    width: 100%;
+    position: relative;
+    max-width: 100%;
+    height: 10%;
+    margin: 0 auto;
+}
+
+.slider {
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1,5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+}
+
+.slider .dish-section {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 1;
+}
+
+.slider-nav a{
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover{
+    opacity: 1;
+}
+
+
+footer {
+    padding-top: 100px;
+    background-color: #A3D9B1;
+    color: #333;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.footer-container {
+    flex-grow: 1;
+}
+
+.logo {
+    width: 100px;
+    height: auto;
+}
+
+#gap{
+    height: 100px;
+}
+  
