--- a/style.css
+++ b/style.css
@@ -7,9 +7,31 @@ body {
     /* display: flex; */
 }
 
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.header h1 {
+    margin: 0;
+    font-size: 24px;
+}
+
+.header img {
+    width: 200px; 
+    height: auto;
+    margin-bottom: 32rem;
+    margin-left: 47rem;
+}
+
 .error {
     color: red;
     font-size: 0.9em;
+    /* font-weight: bold; */
+    background-color: hsla(120, 60%, 70%, 0.3);
+    width: fit-content;
 }
 
 #register {
@@ -59,10 +81,11 @@ label {
     margin-bottom: 5px;
     text-align: left;
     font-family: font2;
+    font-weight: bold;
 }
 
 input {
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -326,7 +349,7 @@ h3 {
     text-align: center;
     font-size: 2.5em;
     font-weight: bolder;
-    color: #FF6347;
+    color: #333;
     margin: 0 0 20px;
 }
 
@@ -375,8 +398,8 @@ h3 {
 .dish-details {
     padding-right: 20px;
     flex: 1 1 200px;
-    font-size: 1em;
-    color: #777;
+    font-size: 1.5em;
+    color: #333;
 }
 
 .bottom-logo {
@@ -465,3 +488,23 @@ footer {
     height: 100px;
 }
   
+.description {
+    display: flex;
+    flex-direction: column;
+    margin-top: 44px;
+    flex-grow: 1;
+    font-size: 28px;
+    color: #000;
+    font-weight: 700;
+  }
+
+@media (max-width: 991px) {
+    .description {
+        max-width: 100%;
+        margin-top: 40px;
+    }
+}
+
+.description-list {
+    font-family: Averia Serif Libre, -apple-system, Roboto, Helvetica, sans-serif;
+}
