--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ body {
 }
 
 .header img {
-    width: 200px; 
+    width: 15vw; 
     height: auto;
-    margin-bottom: 32rem;
-    margin-left: 47rem;
+    margin-bottom: 220%;
+    margin-left: 325%;
 }
 
 .error {
@@ -73,8 +73,8 @@ form {
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding-left: 6rem;
-    padding-right: 6rem;
+    padding-left: 7%;
+    padding-right: 7%;
 }
 
 label {
@@ -86,7 +86,7 @@ label {
 
 input {
     margin-bottom: 5px;
-    padding: 10px;
+    padding: 1.2%;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #d9d9d9;
@@ -186,7 +186,8 @@ h3 {
 }
 
 .logo {
-    height: 50px;
+    margin-top: 20%;
+    height: 20%;
 }
 
 #navbar {
